<resources>
    <string name="app_name">Jobify</string>

    <!-- items del menu lateral -->
    <string name="menu_contacts">Contactos</string>
    <string name="menu_profile">Perfil</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_red">Red Profesionales</string>
    <string name="menu_search">Red Profesionales</string>
    <string name="menu_pop_users">Usuarios Populares</string>
    <string name="menu_logout">Salir</string>

    <!-- actions -->
    <string name="action_filter">Filtrar</string>
    <string name="action_empty">Vaciar</string>
    <string name="action_cancel">Cancelar</string>

    <!-- profile screen -->
    <string name="profile_cuil">CUIL</string>
    <string name="profile_email">Email</string>
    <string name="profile_phone">Teléfono</string>
    <string name="profile_address">Dirección</string>
    <string name="profile_code">Codigo</string>
    <string name="profile_name">Nombre</string>
    <string name="profile_birthday">Nacimiento</string>
    <string name="profile_gender">Sexo</string>

    <string name="pedido_activo">No hay pedido en curso</string>

    <!-- navigation -->
    <string name="navigation_drawer_open">Drawer abierto</string>
    <string name="navigation_drawer_close">Drawer cerrado</string>

    <string name="nav_header_main_professional_name_default">Apellido, Nombre</string>
    <string name="nav_header_main_professional_email_default">Email</string>
    <string name="fragment_main_vendor_name_default">Apellido, Nombre</string>

    <!-- shared preferences -->
    <string name="shared_pref_file_key">ordertracker_preferences</string>
    <string name="shared_pref_current_location_lat">lat</string>
    <string name="shared_pref_current_location_lon">lon</string>
    <string name="shared_pref_current_token">token</string>
    <string name="shared_pref_current_professional">professional</string>

    <string name="fragment_main_report">Votos</string>

    <!-- leyends -->
    <string name="login_leyend">Consigue tu mejor trabajo!</string>
    <string name="forgot_pass">Olvidé la contraseña!?</string>
    <string name="goodby_message">Gracias, vuelva pronto!</string>
    <string name="registry">Unirme</string>
    <string name="login_button">Login</string>
    <string name="zero_contacts">Conéctate! Aún no tienes contactos!</string>
    <string name="redirection_mail">Yendo al email...</string>
    <string name="femenino">Mujer</string>
    <string name="masculino">Hombre</string>
    <string name="profile_summary">Resumen</string>
    <string name="summary_is_empty">Tu resumen está vacio!</string>

    <!-- expertise -->
    <string name="expertise_row_company">Empresa</string>
    <string name="expertise_row_position">Posición</string>
    <string name="expertise_row_from">|-&gt;123</string>
    <string name="expertise_row_to"> &lt;-|123</string>
    <string name="cannot_display_map">No podemos mostrar información de la localización.</string>
    <string name="cannot_inverse_address_calc">No puede obtener la direccion inversa a lat y lon :(</string>
    <string name="zero_expertises">|--------------Experiecia</string>
    <string name="expertise_row_expertise">Experiencia</string>
    <string name="expertise_row_category">Categoria</string>

    <!-- skills -->
    <string name="skill_row_category">Categoria</string>
    <string name="skill_row_skills">Skills</string>
    <string name="zero_skills">|--------------Skills</string>
    <string name="profile_detail_gender_m">Masculino</string>
    <string name="profile_detail_gender_f">Femenino</string>
    <string name="profile_save_current_address">Posición actual</string>
    <string name="profile_photo_label">Foto URL</string>
    <string name="profile_photo">http://</string>

    <!-- edition mode -->
    <string name="personal_edition_add">Agregar</string>
    <string name="menu_profile_edition_item_remove">Borrar</string>
    <string name="personal_edition_expertise_item_company">Company</string>
    <string name="personal_edition_expertise_item_position">Position</string>
    <string name="personal_edition_expertise_item_from">Desde dd-MM-yyyy</string>
    <string name="personal_edition_expertise_item_to">Hasta dd-MM-yyyy</string>
    <string name="personal_edition_expertise_item_expertise">Experiencia</string>
    <string name="personal_edition_expertise_item_category">Categoria</string>
    <string name="personal_edition_skill_item_category">Categoria</string>
    <string name="personal_edition_skill_item_skills">Skills</string>
    <string name="personal_edition_exit">Salir</string>
    <string name="menu_my_contacts_item_contact">Solicitar Amistad</string>
    <string name="menu_my_contacts_item_chat">Chat</string>
    <string name="menu_my_contacts_item_connect">Solicitar Amistad</string>
    <string name="menu_my_contacts_item_unconnect">Desligar</string>
    <string name="menu_my_contacts_item_vote">Recomendar</string>
    <string name="menu_my_contacts_item_unvote">No Recomendar</string>

    <!-- Facebook -->
    <string name="facebook_app_id">384574715223041</string>
    <string name="fb_login_protocol_scheme">fb384574715223041</string>

    <string name="title_activity_chat">ChatActivity</string>
    <string name="menu_my_contacts_item_accept">Aceptar</string>
    <string name="menu_my_contacts_item_reject">Rechazar</string>
    <string name="menu_my_contacts_item_request">Solicitar Amistad</string>

    <string name="my_contacts_tab_friends">Amigos</string>
    <string name="my_contacts_tab_solicitude">Solicitudes</string>
    <string name="menu_login">Login</string>
</resources>
