<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_person"
            android:title="@string/menu_contacts" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_card_details"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_email"
            android:title="@string/menu_chat" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_currency"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_login"
            android:title="@string/menu_login" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />
    </group>
    </menu>
