<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ar.fi.uba.jobify.fragments.ProfessionalListFragment">
    <item android:id="@+id/menu_my_contacts_item_chat"
        android:title="@string/menu_my_contacts_item_chat"
        android:orderInCategory="1"
        app:showAsAction="never" />
    <item android:id="@+id/menu_my_contacts_item_vote"
        android:title="@string/menu_my_contacts_item_vote"
        android:orderInCategory="2"
        app:showAsAction="never" />
    <item android:id="@+id/menu_my_contacts_item_unvote"
        android:title="@string/menu_my_contacts_item_unvote"
        android:orderInCategory="3"
        app:showAsAction="never" />
</menu>
