<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/personal_edition_expertise_item">
            <EditText
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/personal_edition_expertise_item_company"
                android:layout_marginLeft="16dp"
                android:layout_row="2"
                android:layout_column="1"
                android:textSize="18sp"
                android:layout_margin="16dp"
                android:layout_marginRight="50dp"
                android:hint="@string/personal_edition_expertise_item_company"
                android:layout_weight="0.22" />
            <EditText
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/personal_edition_expertise_item_position"
                android:layout_marginLeft="16dp"
                android:layout_row="2"
                android:layout_column="1"
                android:textSize="18sp"
                android:layout_margin="16dp"
                android:layout_marginRight="50dp"
                android:hint="@string/personal_edition_expertise_item_position"
                android:layout_weight="0.22" />
            <EditText
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/personal_edition_expertise_item_from"
                android:layout_marginLeft="16dp"
                android:layout_row="2"
                android:layout_column="1"
                android:textSize="18sp"
                android:layout_margin="16dp"
                android:layout_marginRight="50dp"
                android:hint="@string/personal_edition_expertise_item_from"
                android:layout_weight="0.22" />
            <EditText
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/personal_edition_expertise_item_to"
                android:layout_marginLeft="16dp"
                android:layout_row="2"
                android:layout_column="1"
                android:textSize="18sp"
                android:layout_margin="16dp"
                android:layout_marginRight="50dp"
                android:hint="@string/personal_edition_expertise_item_to"
                android:layout_weight="0.22" />
            <EditText
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/personal_edition_expertise_item_expertise"
                android:layout_marginLeft="16dp"
                android:layout_row="2"
                android:layout_column="1"
                android:textSize="18sp"
                android:layout_margin="16dp"
                android:layout_marginRight="50dp"
                android:hint="@string/personal_edition_expertise_item_expertise"
                android:layout_weight="0.22" />
            <EditText
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/personal_edition_expertise_item_category"
                android:layout_marginLeft="16dp"
                android:layout_row="2"
                android:layout_column="1"
                android:textSize="18sp"
                android:layout_margin="16dp"
                android:layout_marginRight="50dp"
                android:hint="@string/personal_edition_expertise_item_category"
                android:layout_weight="0.22" />

        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/personal_edition_skill_item">
            <EditText
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/personal_edition_skill_item_category"
                android:layout_marginLeft="16dp"
                android:layout_row="2"
                android:layout_column="1"
                android:textSize="18sp"
                android:layout_margin="16dp"
                android:layout_marginRight="50dp"
                android:hint="@string/personal_edition_skill_item_category"
                android:layout_weight="0.22" />
            <EditText
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/personal_edition_skill_item_skills"
                android:layout_marginLeft="16dp"
                android:layout_row="2"
                android:layout_column="1"
                android:textSize="18sp"
                android:layout_margin="16dp"
                android:layout_marginRight="50dp"
                android:hint="@string/personal_edition_skill_item_skills"
                android:layout_weight="0.22" />
        </LinearLayout>

        <Button
            android:text="@string/personal_edition_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/personal_edition_exit"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="45dp" />
        <Button
            android:text="@string/personal_edition_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/personal_edition_add"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/personal_edition_listview"
        android:layout_weight="1"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


    </ListView>
</LinearLayout>